# pysfml11

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conftest.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: build_wheel.yml  main.yml
examples/: events.py  sand.py  simple.py  text.py
src/: main.cpp
tests/: test_videomode.py
tests/audio/: test_inputsoundfile.py  test_listener.py  test_music.py  test_outputsoundfile.py  test_sound.py  test_soundbuffer.py  test_soundsource.py
tests/graphics/: test_circleshape.py  test_color.py  test_convexshape.py  test_glsl.py  test_image.py  test_rect.py  test_rectangleshape.py  test_renderwindow.py  test_shader.py  test_text.py  test_texture.py  test_transform.py  test_transformable.py  test_vertexarray.py  test_vertexbuffer.py  test_view.py
tests/resources/: fragment.glsl  vertex.glsl
tests/system/: test_clock.py  test_time.py  test_vector2.py  test_vector3.py
tests/window/: test_clipboard.py  test_context.py  test_contextsettings.py  test_cursor.py  test_mouse.py  test_style.py  test_videomode.py  test_window.py
